--- a/requirements.txt
+++ b/requirements.txt
@@ -1,11 +1,12 @@
-config==0.3.9
+asgiref==3.4.1
 dj-database-url==0.5.0
-Django==1.11
-django-bootstrap3==10.0.1
+Django==3.2.5
+django-bootstrap3==15.0.0
 django-heroku==0.3.1
-gunicorn==19.9.0
-Pillow==5.2.0
-psycopg2==2.7.5
+gunicorn==20.0.0
+Pillow==8.3.0
+psycopg2==2.9.1
 python-decouple==3.1
-pytz==2018.5
-whitenoise==4.0
+pytz==2021.1
+sqlparse==0.4.1
+whitenoise==5.2.0
