added changers to media file

--- a/.env
+++ b/.env
@@ -1,9 +1,9 @@
 SECRET_KEY='^kd@8&ftn4gk%3mzo2(md36$09&vg_ija(=n%v5%oy!0qytx9='
-DEBUG=False
+DEBUG=True
 DB_NAME='gallery'
 DB_USER='sharon'
 DB_PASSWORD='34359943'
 DB_HOST='127.0.0.1'
-MODE='pro' 
+MODE='dev' 
 ALLOWED_HOSTS='.localhost', '.herokuapp.com', '.127.0.0.1'
 DISABLE_COLLECTSTATIC=1
